--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,12 +67,6 @@
                     </li>
                     <li class="d-flex gap-4">
                         <div>
-                            <h5 class="mb-0">Styling</h5>
-                            This looks pretty damn fine...5 years ago
-                        </div>
-                    </li>
-                    <li class="d-flex gap-4">
-                        <div>
                             <h5 class="mb-0">Suggestion page</h5>
                             Yet another feature that the discord webhooks enable for me to implement easily.<br\>
                                 I would however like to have a page that shows suggestions and allows upvotes so that I
@@ -97,8 +91,14 @@
                     </li>
                     <li class="d-flex gap-4">
                         <div>
-                            <h5 class="mb-0">Leaderboard</h5>
-                            Leaderboard interaction in discord. Might also make into a UI to allow for pagination
+                            <h5 class="mb-0">Discord Leaderboard</h5>
+                            Leaderboard interaction in discord. Might also make UI allow for pagination
+                        </div>
+                    </li>
+                    <li class="d-flex gap-4">
+                        <div>
+                            <h5 class="mb-0">Commit lines +/- tracking</h5>
+                            Might be fun to track
                         </div>
                     </li>
                     <li class="d-flex gap-4">
