--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,16 +7,21 @@
                 <li class="d-flex gap-4">
                     <div>
                         <h5 class="mb-0">Auth and Tracking</h5>
-                        Auth against Discord & GitHub to prove ownership. Select which repo you'd like to track.
-                        (Currently cannot change)<br /><sub>Hit setup in the top right.</sub>
+                        Auth against Discord & GitHub to prove ownership. Select which repository you'd like to track.
+                        (Currently cannot change)<br /><sub>Hit setup in the top right to begin!</sub>
                     </div>
                 </li>
                 <li class="d-flex gap-4">
                     <div>
                         <h5 class="mb-0">Streaks</h5>
-                        You'll have your streak increased and it will require at least 1 push daily from your
-                        timezone (12am it will expire if no push)<br\>As well as current streak being recorded, best
-                            streak is also recorded as a personal best to beat.
+                        Make a push to start your streak! It will require at least 1 push daily to maintain. If a day
+                        passes where no push was made the streak will end.
+                        <ul>
+                            <li>streak counting daily (once per day, based on your timezone)</li>
+                            <li>best streak recorded as a goal to beat</li>
+                            <li>streaks will end if a day passes where no push to the chosen repository is found (based
+                                on your timezone)</li>
+                        </ul>
                     </div>
                 </li>
                 <li class="d-flex gap-4">
@@ -51,12 +56,6 @@
 
             <h2 class="fw-bold mb-0">Todo</h2>
             <ul class="d-grid gap-4 my-5 list-unstyled small">
-                <li class="d-flex gap-4">
-                    <div>
-                        <h5 class="mb-0">Clean up routing</h5>
-                        This one speaks for itself...
-                    </div>
-                </li>
                 <li class="d-flex gap-4">
                     <div>
                         <h5 class="mb-0">Suggestion page</h5>
