--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,23 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '~bootstrap-icons/font/bootstrap-icons';
+
 
 @layer base {
   body {
-    @apply bg-primary text-text-primary;
+    @apply bg-custom-primarybg text-custom-primarytext;
   }
 }
-
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
