--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -57,3 +57,29 @@ button.styled-button span {
 button.styled-button:hover span {
   transform: skewX(-12deg) skewY(-12deg);
 }
+
+
+/* LOADER */
+.content-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.overlay.fade-out {
+  opacity: 0;
+  pointer-events: none;
+}
